[package]
name = "rmips"
version = "0.1.0"
edition = "2018"
authors = ["starfleetcadet75 <starfleetcadet75@gmail.com>"]
description = "MIPS R3000 virtual machine simulator"
readme = "README.md"
license-file = "LICENSE.md"
repository = "https://github.com/starfleetcadet75/rmips"
keywords = ["emulator", "mips"]
categories = ["embedded", "emulators"]

[dependencies]
log = "0.4"
anyhow = "1.0"
gdbstub = "0.4.3"
bitflags = "1.2.1"
capstone = "0.7.0"
simplelog = "0.8.0"
clap = "3.0.0-beta.1"
human-panic = "1.0.3"

[dev-dependencies]
pretty_assertions = "0.6.1"
